# RumiCarRos

./: .clang-format  .gitignore  .gitmodules  README.md  docker-compose.yml
docker/: entrypoint
docs/: CrossCompilation.md  RasPiZero.md  RasPiZero2.md  RemoteDesktop.md  UbuntuNotes.md  WindowsNotes.md
rumi_driver/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
rumi_driver/config/: driver.yaml  driver_kuro.yaml  driver_original.yaml
rumi_driver/include/: rumi_pwm.hpp
rumi_driver/rumi_driver/: rumi_driver.py
rumi_driver/src/: VelocitySensor.cpp  VelocitySensor.hpp  rumi_driver_node.cpp  rumi_gpio.cpp  rumi_pwm.cpp
rumi_hw/: CMakeLists.txt  README.md  package.xml
rumi_hw/cmake/: config.cmake.in
rumi_hw/include/rumi_hw/: Beeper.hpp  DRV8835.hpp  GPIO.hpp  HallSensor.hpp  MCP3002.hpp  PWM.hpp
rumi_hw/src/: Beeper.cpp  DRV8835.cpp  GPIO.cpp  HallSensor.cpp  MCP3002.cpp  PWM.cpp
rumi_lane/: CMakeLists.txt  README.md  package.xml
rumi_lane/config/: rumi_lane.yaml
rumi_lane/launch/: lane.launch
rumi_lane/src/: rumi_lane_node.cpp
rumi_nav/: CMakeLists.txt  README.md  package.xml
rumi_nav/config/: amcl.yaml  localization.yaml  nav.yaml  slam.yaml  through_poses_bt.xml  to_pose_bt.xml
rumi_nav/launch/: lidar.launch  localization.launch  mapping.launch  nav.py
rumi_nav/src/: rumi_nav_node.cpp
rumi_teleop/: CMakeLists.txt  README.md  package.xml
rumi_teleop/config/: teleop.yaml
rumi_teleop/launch/: teleop.launch
rumi_teleop/src/: rumi_teleop_node.cpp
rumicar/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
rumicar/config/: camera.yaml  ydlidar.rviz
rumicar/etc/: mmal_service_16.1.yaml
rumicar/launch/: camera.launch  kuro.launch  main.launch  original.launch  ydlidar.launch
rumicar/rumicar/: rumicar.py
rumicar/script/: exec
rumicar/systemd/: rcar.service
rumicar_kuro/: CMakeLists.txt  README.md  package.xml
rumicar_kuro/config/: driver_kuro.yaml
rumicar_kuro/launch/: kuro.launch  laser_odom.launch  lidar.launch  localization.launch  mapping.launch
rumicar_kuro/rviz/: main.rviz
setup/: README.md  deploy
setup/systemd/: pwm-exporter.service  rcar.service
setup/udev/: 99-pwm.rules
