<package format="3">
  <name>rumi_driver</name>
  <version>0.0.0</version>
  <description>RumiCar ROS2 driver</description>
  <maintainer email="akela1101@gmail.com">andrei</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>libgpiod-dev</build_depend>
  <build_depend>pkg-config</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_depend>rumi_hw</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
