<package format="3">
  <name>rumi_driver</name>
  <version>0.0.0</version>
  <description>RumiCar ROS2 driver</description>
  <maintainer email="akela1101@gmail.com">andrei</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>libgpiod-dev</build_depend>
  <build_depend>rumi_hw</build_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>pkg-config</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
