<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rumi_teleop</name>
  <version>0.0.0</version>
  <description>RumiCar teleoperation</description>
  <maintainer email="akela1101@gmail.com">andrei</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joy</exec_depend>
  <exec_depend>joy_teleop</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
