<package format="3">
  <name>rumicar</name>
  <version>0.0.0</version>
  <description>RumiCar launch files</description>
  <maintainer email="akela1101@gmail.com">andrei</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rumi_driver</exec_depend>
  <exec_depend>rumi_lane</exec_depend>
  <exec_depend>rumi_teleop</exec_depend>

  <exec_depend>topic_tools</exec_depend>
  <exec_depend>v4l2_camera</exec_depend>

  <!--debs-->
  <exec_depend>v4l-utils</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
